--- a/TennisStoreClient/wwwroot/index.html
+++ b/TennisStoreClient/wwwroot/index.html
@@ -6,24 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TennisStoreClient</title>
     <base href="/" />
+
+    <!-- Stylesheets -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="TennisStoreClient.styles.css" rel="stylesheet" />
     <link href="font-awesome/css/all.min.css" rel="stylesheet" />
-    <script src="font-awesome/js/all.min.js"></script>
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
-    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
-    <script src="js/dialog.js"></script>
+
 </head>
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+       
     </div>
 
     <div id="blazor-error-ui">
@@ -31,8 +27,13 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
+    <!-- Scripts -->
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="font-awesome/js/all.min.js"></script>
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <script src="js/dialog.js"></script>
 </body>
 
 </html>
