--- a/TennisStoreClient/wwwroot/index.html
+++ b/TennisStoreClient/wwwroot/index.html
@@ -8,12 +8,12 @@
     <base href="/" />
 
     <!-- Stylesheets -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">-->
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="TennisStoreClient.styles.css" rel="stylesheet" />
-    <link href="font-awesome/css/all.min.css" rel="stylesheet" />
-
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <link href="css/style-prefix.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -33,6 +33,7 @@
 
     <!-- Scripts -->
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="libs/swiper/swiper-bundle.min.js"></script>
     <script src="js/dialog.js"></script>
 </body>
 
